crates/actor-core/tests/compile_fail/unhandled_tell.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/unhandled_tell.rs:41:26
   |
41 |     let _ = greeter.tell(Goodbye);
   |                     ---- ^^^^^^^ expected `Hello`, found `Goodbye`
   |                     |
   |                     arguments to this method are incorrect
   |
help: the return type of this call is `Goodbye` due to the type of the argument passed
  --> tests/compile_fail/unhandled_tell.rs:41:13
   |
41 |     let _ = greeter.tell(Goodbye);
   |             ^^^^^^^^^^^^^-------^
   |                          |
   |                          this argument influences the return type of `tell`
note: method defined here
  --> src/refs.rs
   |
   |     pub async fn tell<M>(&self, msg: M) -> Result<(), CallError>
   |                  ^^^^
